[tool.poetry]
name = "contactsoftware-functions"
version = "0.9.0"
readme = "README.md"

license = "MIT"
authors = [
    "Julian Alberts <jal@contact.de>",
    "Jens Kürten <jku@contact.de>"
]
description = "Library for creating Functions for CIM Database Cloud."
repository = "https://github.com/cslab/functions-sdk-python"
documentation = "https://cslab.github.io/functions-sdk-python/"

packages = [
    { include = "csfunctions"}
   ]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pydantic = ">=2.3,<3"
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.12.1"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
