[project]
name = "contactsoftware-functions"
dynamic = ["version"]
description = "Library for creating Functions for CIM Database Cloud."
authors = [
    { name = "Julian Alberts", email = "jal@contact.de" },
    { name = "Jens Kürten", email = "jku@contact.de" },
]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.27.1,<3",
    "pydantic>=2.3,<3",
    "pyyaml>=6.0.2,<7",
    "werkzeug>=3.1.3,<4",
]

[project.urls]
Repository = "https://github.com/cslab/functions-sdk-python"
Documentation = "https://cslab.github.io/functions-sdk-python/"

[dependency-groups]
test = [
    "pytest>=8.3.4,<9",
    "requests-mock>=1.12.1,<2",
]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.14,<10",
    "mkdocs-link-marker>=0.1.3,<0.2",
    "types-requests>=2.32.4.20250809,<3",
    "types-pyyaml>=6.0.12.20250822,<7",
    "setuptools-scm>=9.2.2",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = [
    "setuptools>=68",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly list your top-level packages
packages = ["csfunctions"]

[tool.setuptools_scm]
# Optional: if your git tags are like "v1.2.3", tell SCM to strip the 'v'
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
